<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".TonalityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ionianView"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/background_light"
            android:clickable="true">

            <TextView
                android:id="@+id/ionianText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/ionian"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="65dp"
                android:text="@string/high_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ionianHigh"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="end"
                android:text="12/10"
                android:textAllCaps="true"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dorianView"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@android:color/background_light"
            android:clickable="true">

            <TextView
                android:id="@+id/dorianText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/dorian"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="65dp"
                android:text="@string/high_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dorianHigh"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="end"
                android:text="10/10"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phrygianView"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@android:color/background_light"
            android:clickable="true">

            <TextView
                android:id="@+id/phrygianText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/phrygian"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="65dp"
                android:text="@string/high_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/phrygianHigh"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="end"
                android:text="0/10"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lydianView"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@android:color/background_light"
            android:clickable="true">

            <TextView
                android:id="@+id/lydianText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/lydian"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="65dp"
                android:text="@string/high_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lydianHigh"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="end"
                android:text="10/10"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mixolydianView"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@android:color/background_light"
            android:clickable="true">

            <TextView
                android:id="@+id/mixolydianText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/mixolydian"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="65dp"
                android:text="@string/high_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mixolydianHigh"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="end"
                android:text="10/10"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/aeolianView"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@android:color/background_light"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="65dp"
                android:text="@string/high_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/aeolianText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/aeolian"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/aeolianHigh"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="end"
                android:text="0/10"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/locrianView"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@android:color/background_light"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="65dp"
                android:text="@string/high_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/locrianText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/locrian"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/locrianHigh"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="end"
                android:text="0/10"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>